Thu Jul  4 00:36:03 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* internal.h (SIGNED_INTEGER_MAX): suppress warning C4146 on VC6.
	  seems a logical ORed expression becomes unsigned.

Thu Jul  4 00:13:01 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ruby_atomic.h (rb_w32_atomic_cas): call InterlockedCompareExchange
	  directly.

	* ruby_atomic.h (ATOMIC_CAS): fix missing function call.

Wed Jul  3 23:47:35 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ruby_atomic.h (ATOMIC_CAS): suppress C4022 and C4047 warnings in
	  VC6.  only InterlockedCompareExchange is declared using PVOID.

Wed Jul  3 22:29:20 2013  Tanaka Akira  <akr@fsij.org>

	* internal.h (ruby_digit36_to_number_table): Declared.

	* util.c (ruby_digit36_to_number_table): Moved from scan_digits.

	* bignum.c (conv_digit): Use ruby_digit36_to_number_table.

	* pack.c (hex2num): Ditto.

Wed Jul  3 18:12:56 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/mkmf.rb (install_dirs): revert DESTDIR prefix by r39841, since
	  it is fixed by r41648.  [ruby-core:55760] [Bug #8115]

Wed Jul  3 14:15:25 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* dir.c (do_stat): use rb_w32_ustati64() in win32.c to get rid of
	  mysterious behavior of FindFirstFile() Windows API which treat "<"
	  and ">" like as wildcard characters.  [ruby-core:55764] [Bug #8597]

Wed Jul  3 12:06:42 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (maxpow_in_bdigit): Renamed from calc_hbase and return
	  maxpow.

Tue Jul  2 23:47:50 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (roomof): Cast to long.
	  (rb_ull2big): Fix bignew arguments.

Tue Jul  2 21:17:37 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (rb_cstr_to_inum): Merge two temporary buffers.

Tue Jul  2 20:25:04 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (rb_cstr_to_inum): Use BDIGIT_DBL to collect adjacent digits.
	  (BDIGIT_DBL_MAX): New macro.
	  (maxpow_in_bdigit_dbl): New function.

Tue Jul  2 17:23:33 2013  Shugo Maeda  <shugo@ruby-lang.org>
